Fix pipeline failure by changing StandardCharsets.UTF_8 to "UTF-8".